--- a/www/index.html
+++ b/www/index.html
@@ -18,7 +18,7 @@
     <script src="./js/jquery-mobile.js"></script>
     <!--<script src="./js/jquery-ui.js"></script>-->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="./js/myscript.js"> </script>
+    <script src="./js/myscript.js"></script>
     <script src="./js/jquery.cookie.js"></script>
 </head>
 
@@ -73,7 +73,7 @@
             <br>
             <!---->
             <div>
-                <a data-role="button" id="loginbutton" style="background-color: #8E0D0E;color: #fff"
+                <a data-role="button" id="loginbutton" style="border:none; background-color: #8E0D0E;color: #fff"
                    onclick="login()">Login</a>
             </div>
             <!---->
