--- a/www/index.html
+++ b/www/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./css/jquery.mobile.theme.css"/>
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="https://unpkg.com/purecss@0.6.0/build/pure-min.css">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 
     <script src="./js/jquery.js"></script>
     <script src="./js/jquery-mobile.js"></script>
@@ -124,12 +125,24 @@
                     <div class="align-right">
                         <a href="" data-role="button" style="background-color: #8E0D0E"
                            class="ui-btn" onclick="change_page('#contacts','slide')">
-                            <i style="color: #ffffff; font-size: 20px;" class="zmdi zmdi-account zmd-3x"></i>
+                            <i style="color: #ffffff; font-size: 20px;" class="fa fa-address-book"></i>
                         </a>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
+</div>
+
+<div data-role="page" id="contacts">
+    <div data-role="header" style="background-color: #8E0D0E">
+
+        <h1 style="color: #ffffff; opacity: 0" class="align-center"><b>Panels</b></h1>
+        <!--<a href="index.html" data-transition="flip"></a>-->
+    </div>
+
+    <div data-role="content" id="mycontacts">
+
     </div>
 </div>
 
