--- a/www/index.html
+++ b/www/index.html
@@ -20,6 +20,7 @@
     <!--<script src="./js/jquery-ui.js"></script>-->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="./js/myscript.js"></script>
+    <script src="cordova.js"></script>
     <script src="./js/jquery.cookie.js"></script>
 </head>
 
