--- a/www/index.html
+++ b/www/index.html
@@ -91,8 +91,9 @@
     <div data-role="header" style="background-color: #8E0D0E; border: none">
         <h1 style="color: #ffffff; opacity: 0" class="align-center"><b>Panels</b></h1>
 
-        <a href="#mypanel" style="background-color: #8E0D0E; border: none"><i data-transition="flip"><i
-                class="fa fa-bars"></i></i> </a>
+        <a href="#mypanel" style="background-color: #8E0D0E; border: none">
+            <i class="fa fa-bars"></i>
+        </a>
     </div>
 
     <div data-role="panel" data-position="left" data-display="overlay" id="mypanel" style="background-color: #eeeeee">
