--- a/www/index.html
+++ b/www/index.html
@@ -140,7 +140,7 @@
         <!--<a href="index.html" data-transition="flip"></a>-->
     </div>
 
-    <div data-role="content" id="mycontacts">
+    <div data-role="content" id="mycontacts" style="background-color: #eeeeee">
 
     </div>
 </div>
