--- a/www/index.html
+++ b/www/index.html
@@ -92,7 +92,7 @@
         <h1 style="color: #ffffff; opacity: 0" class="align-center"><b>Panels</b></h1>
 
         <a href="#mypanel" style="background-color: #8E0D0E; border: none">
-            <i class="fa fa-bars"></i>
+            <i style="color: #ffffff" class="fa fa-bars"></i>
         </a>
     </div>
 
@@ -128,9 +128,7 @@
         <div class="align-center">
             <a data-role="button" id="sendbtn" style="background-color: #8E0D0E;color: #fff" onclick="">Send</a>
         </div>
-
     </div>
-
 </div>
 
 <div data-role="page" id="contacts">
