--- a/www/index.html
+++ b/www/index.html
@@ -128,7 +128,10 @@
         <div class="align-center">
             <a data-role="button" id="sendbtn" style="background-color: #8E0D0E;color: #fff" onclick="">Send</a>
         </div>
+
     </div>
+
+
 </div>
 
 <div data-role="page" id="contacts">
@@ -140,6 +143,19 @@
 
     <div data-role="content" id="mycontacts" style="background-color: #eeeeee">
 
+    </div>
+
+    <div style="position: fixed" data-role="footer" data-position="fixed" data-visible-on-page-show="true">
+
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-9"></div>
+
+                <div class="col-xs-3">
+                    <a data-role="button" id="done" style="background-color: #8E0D0E;color: #fff" onclick="get_numbers()">Done</a>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
