--- a/www/index.html
+++ b/www/index.html
@@ -254,6 +254,7 @@
 <script src="./js/nativedroid2.js"></script>
 <script src="./js/nd2settings.js"></script>
 <script src="./js/myscript.js"></script>
+<script src="cordova.js"></script>
 <script src="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
 </body>
 
