--- a/www/index.html
+++ b/www/index.html
@@ -211,7 +211,7 @@
             <li>
                 <a href="#">
                     <h2>Juliet Gieseke</h2>
-                    <p>flowerpower69@rainbow.com</p>
+                    <p>flowerpower69@rainbokjnjbw.com</p>
                 </a>
             </li>
         </ul>
