--- a/www/index.html
+++ b/www/index.html
@@ -246,9 +246,11 @@
 </div>
 <!--end contacts page-->
 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+<!--<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>-->
+<script src="./js/jquery.js"></script>
 <script src="//code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
-<script src="//ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.js"></script>
+<script src="./js/jquery-mobile.js"></script>
+<!--<script src="//ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.js"></script>-->
 <script src="./js/waves.min.js"></script>
 <script src="./js/wow.min.js"></script>
 <script src="./js/nativedroid2.js"></script>
