--- a/www/index.html
+++ b/www/index.html
@@ -18,6 +18,18 @@
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
 
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <!--<script src="./js/jquery.js"></script>-->
+    <script src="//code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
+    <!--<script src="./js/jquery-mobile.js"></script>-->
+    <script src="//ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.js"></script>
+    <script src="./js/waves.min.js"></script>
+    <script src="./js/wow.min.js"></script>
+    <script src="./js/nativedroid2.js"></script>
+    <script src="./js/nd2settings.js"></script>
+    <script src="./js/myscript.js"></script>
+    <script src="cordova.js"></script>
+    <script src="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
 </head>
 
 <body>
@@ -246,18 +258,6 @@
 </div>
 <!--end contacts page-->
 
-<!--<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>-->
-<script src="./js/jquery.js"></script>
-<script src="//code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
-<script src="./js/jquery-mobile.js"></script>
-<!--<script src="//ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.js"></script>-->
-<script src="./js/waves.min.js"></script>
-<script src="./js/wow.min.js"></script>
-<script src="./js/nativedroid2.js"></script>
-<script src="./js/nd2settings.js"></script>
-<script src="./js/myscript.js"></script>
-<script src="cordova.js"></script>
-<script src="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
 </body>
 
 </html>
