--- a/www/index.html
+++ b/www/index.html
@@ -14,15 +14,15 @@
           href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
     <link rel="stylesheet" href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
 
-    <meta name="mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-capable" content="yes"/>
-    <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+    <!--<meta name="mobile-web-app-capable" content="yes">-->
+    <!--<meta name="apple-mobile-web-app-capable" content="yes"/>-->
+    <!--<meta name="apple-mobile-web-app-status-bar-style" content="black"/>-->
 
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script src="./js/jquery.js"></script>
     <!--<script src="./js/jquery.js"></script>-->
-    <script src="//code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
+    <script src="./js/jquery-ui.js"></script>
     <!--<script src="./js/jquery-mobile.js"></script>-->
-    <script src="//ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.js"></script>
+    <script src="./js/jquery-mobile.js"></script>
     <script src="./js/waves.min.js"></script>
     <script src="./js/wow.min.js"></script>
     <script src="./js/nativedroid2.js"></script>
