--- a/www/index.html
+++ b/www/index.html
@@ -1,35 +1,63 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>nativeDroid II - jQueryMobile Template</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css"/>
-    <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.css"/>
+    <link rel="stylesheet" href="./css/jquery.mobile.min.css"/>
     <link rel="stylesheet" href="./css/waves.min.css"/>
     <link rel="stylesheet" href="./css/animate.css"/>
     <link rel="stylesheet" href="./css/nativedroid2.color.deep-orange.css"/>
     <link rel="stylesheet" href="./css/nativedroid2.css"/>
-    <link rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
 
-    <!--<meta name="mobile-web-app-capable" content="yes">-->
-    <!--<meta name="apple-mobile-web-app-capable" content="yes"/>-->
-    <!--<meta name="apple-mobile-web-app-status-bar-style" content="black"/>-->
+    <meta charset="utf-8"/>
+    <meta name="format-detection" content="telephone=no"/>
+    <meta name="msapplication-tap-highlight" content="no"/>
+    <meta name="viewport"
+          content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width"/>
+    <meta http-equiv="Content-Security-Policy"
+          content="default-src * 'unsafe-inline'; style-src 'self' 'unsafe-inline'; media-src *"/>
 
     <script src="./js/jquery.js"></script>
-    <!--<script src="./js/jquery.js"></script>-->
     <script src="./js/jquery-ui.js"></script>
-    <!--<script src="./js/jquery-mobile.js"></script>-->
     <script src="./js/jquery-mobile.js"></script>
+    <script src="./js/jquery.cookie.js"></script>
     <script src="./js/waves.min.js"></script>
     <script src="./js/wow.min.js"></script>
     <script src="./js/nativedroid2.js"></script>
     <script src="./js/nd2settings.js"></script>
-    <script src="./js/myscript.js"></script>
-    <script src="cordova.js"></script>
-    <script src="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
+    <script type="text/javascript" src="./js/myscript.js"></script>
+    <script type="text/javascript" src="./js/index.js"></script>
+
+
+    <!--olldll-->
+    <!--<title>nativeDroid II - jQueryMobile Template</title>-->
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>-->
+
+    <!--<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css"/>-->
+    <!--<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.css"/>-->
+    <!--<link rel="stylesheet" href="./css/waves.min.css"/>-->
+    <!--<link rel="stylesheet" href="./css/animate.css"/>-->
+    <!--<link rel="stylesheet" href="./css/nativedroid2.color.deep-orange.css"/>-->
+    <!--<link rel="stylesheet" href="./css/nativedroid2.css"/>-->
+    <!--<link rel="stylesheet"-->
+          <!--href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">-->
+    <!--<link rel="stylesheet" href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">-->
+
+    <!--&lt;!&ndash;<meta name="mobile-web-app-capable" content="yes">&ndash;&gt;-->
+    <!--&lt;!&ndash;<meta name="apple-mobile-web-app-capable" content="yes"/>&ndash;&gt;-->
+    <!--&lt;!&ndash;<meta name="apple-mobile-web-app-status-bar-style" content="black"/>&ndash;&gt;-->
+
+    <!--<script src="./js/jquery.js"></script>-->
+    <!--&lt;!&ndash;<script src="./js/jquery.js"></script>&ndash;&gt;-->
+    <!--<script src="./js/jquery-ui.js"></script>-->
+    <!--&lt;!&ndash;<script src="./js/jquery-mobile.js"></script>&ndash;&gt;-->
+    <!--<script src="./js/jquery-mobile.js"></script>-->
+    <!--<script src="./js/waves.min.js"></script>-->
+    <!--<script src="./js/wow.min.js"></script>-->
+    <!--<script src="./js/nativedroid2.js"></script>-->
+    <!--<script src="./js/nd2settings.js"></script>-->
+    <!--<script src="./js/myscript.js"></script>-->
+    <!--<script src="cordova.js"></script>-->
+    <!--<script src="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>-->
 </head>
 
 <body>
